# disclosure_api

./: arg_fs.csv  cal.csv  def.csv  df_arc.csv  df_label_global.csv  df_label_local.csv  df_locator.csv  pre.csv  pyproject.toml  test.csv  test.html
UsuallyFunction/: UsuallyFunction.py  __init__.py
disclosure_api/: GetGrobalLabel.py  JGAAPmodel.py  TDNETmodel.py  TDNETxbrl.py  __init__.py  __sample.py  const.py  func.py  request.py  samplecode.py  taxonomy.py  tdnet_request.py  xbrl_read.py
disclosure_api/const/: const.json  const.py
disclosure_api/doc/sample/XBRLData/Attachment/: 0101010-qcbs01-tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-ixbrl.htm  0102010-qcpl11-tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-ixbrl.htm  0102020-qcci11-tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-ixbrl.htm  0103010-qccf01-tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-ixbrl.htm  index.txt  manifest.xml  qualitative.htm  tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-cal.xml  tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-def.xml  tse-qcedjpfr-30310-2022-10-31-01-2022-11-30-lab-en.xml  (+3 more)
disclosure_api/doc/taxonomy_raw/tdnet/: tse-ed-t-2014-01-12-lab-en.xml
disclosure_api/doc/tests/: qcbs01.csv  qcci11.csv  qcedjpsm.csv
disclosure_api/util/: __init__.py  _function.py
disclosure_api/xbrl/: __IXbrlCollection.py  __init__.py  attachment.py  summary.py
doc/taxonomy_raw/tdnet/: tse-ed-t-2014-01-12-ref.xml  tse-ed-t-2014-01-12.xsd
doc/taxonomy_tsv/: summary_taxonomy.tsv
doc/tests/: qccf01.csv  qcpl11.csv
tests/: test_request.py  test_taxonomy.py  test_tdnet_request.py  test_xbrl_read.py
(+5 files in other folders)
