[tool.poetry]
name = "disclosure-api"
version = "2.0.1"
description = "timery disclosure download API"
authors = ["kent <kent2980@gmail.com>"]
readme = "README.md"
packages = [{include = "disclosure_api"}]

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.64.1"
beautifulsoup4 = "^4.12.3"
jaconv = "^0.4.0"
pandas = "^2.2.3"
requests = "^2.32.3"
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
